syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message PcfInstanceSyncPerpetualTaskParams {
  string infraMappingId = 1;
  string applicationName = 2;
  string orgName = 3;
  string space = 4;
  bytes pcfConfig = 5;
  bytes encryptedData = 6;
}
